Add 10 PRINT art.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Generative art</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,6 +11,21 @@
 
     </head>
     <body>
-        
+        <header>
+            <h1>Generative art</h1>
+            <p>A gallery of art generated with code and rendered using HTML5 Canvas.<br>
+            This project is inspired by the <a href="https://canvas-cards.glitch.me/">Canvas Cards</a> collection by <a href="https://twitter.com/friendofpixels">Luke Patton.</a></p>
+            
+        </header>
+        <div class="canvas-container _10print-container">
+            <div class="about">
+                <h2>10 PRINT</h2>
+                <p>10 PRINT is a program written in the early 80s to run on a COMMODORE 64 system to generate a beautiful maze with a simple condition.<span class="code">10 PRINT CHR$ (205.5 + RND (1)); : GOTO 10</span>It prints either a \ or a / with a 50% probability for each.
+                </p>
+            </div>
+            <canvas id="10print"></canvas>
+        </div>
+
+        <script src="js/10print.js"></script>
     </body>
 </html>
