--- a/index.html
+++ b/index.html
@@ -29,7 +29,24 @@
             </div>
             <canvas id="10print"></canvas>
         </div>
+        <div class="canvas-container spiro-container">
+            <div class="about">
+                <div class="description">
+                    <h2>Spiro</h2>
+                    <p>Who doesn't love a good spirograph?</p>
+                </div>
+                <div class="control">
+                    <label for="spiro-radius">Radius ratio: </label>
+                    <input type="range" id="spiro-radius" oninput="spiro()" min="0" max="1" step="0.01">
+                    <br>
+                    <label for="spiro-rotation">Loops: </label>
+                    <input type="range" id="spiro-rotation" oninput="spiro()" min="1" max="10" step="1">
+                </div>
+            </div>
+            <canvas id="spiro"></canvas>
+        </div>
 
         <script src="js/10print.js"></script>
+        <script src="js/spiro.js"></script>
     </body>
 </html>
