--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     <label for="spiro-radius">Radius ratio: </label>
                     <input type="range" id="spiro-radius" oninput="spiro()" min="0" max="1" step="0.01">
                     <br>
-                    <label for="spiro-rotation">Loops: </label>
-                    <input type="range" id="spiro-rotation" oninput="spiro()" min="1" max="10" step="1">
+                    <label for="spiro-loops">Loops: </label>
+                    <input type="range" id="spiro-loops" oninput="spiro()" min="1" max="10" step="1">
                 </div>
             </div>
             <canvas id="spiro"></canvas>
