--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                     <p>Who doesn't love a good spirograph?</p>
                 </div>
                 <div class="control">
-                    <label for="spiro-radius">Radius ratio: </label>
+                    <label for="spiro-radius">Loopiness: </label>
                     <input type="range" id="spiro-radius" oninput="spiro()" min="0" max="1" step="0.01">
                     <br>
                     <label for="spiro-loops">Loops: </label>
-                    <input type="range" id="spiro-loops" oninput="spiro()" min="1" max="10" step="1">
+                    <input type="range" id="spiro-loops" oninput="spiro()" min="1" max="20" step="1">
                 </div>
             </div>
             <canvas id="spiro"></canvas>
