Add Square Bloom.

--- a/index.html
+++ b/index.html
@@ -44,8 +44,20 @@
             </div>
             <canvas id="spiro"></canvas>
         </div>
+        <div class="canvas-container square-bloom-container">
+            <div class="about">
+                <div class="description">
+                    <h2>Square bloom</h2>
+                    <p>Draw the biggest square you can at a random place that doesn't touch any existing squares.</p>
+                </div>
+                <div class="control">
+                </div>
+            </div>
+            <canvas id="square-bloom"></canvas>
+        </div>
 
         <script src="js/10print.js"></script>
         <script src="js/spiro.js"></script>
+        <script src="js/squareBloom.js"></script>
     </body>
 </html>
