Add colors and control to square bloom.

--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
             <div class="about">
                 <div class="description">
                     <h2>Square bloom</h2>
-                    <p>Draw the biggest square you can at a random place that doesn't touch any existing squares.</p>
+                    <p>Draw the biggest square you can at a random place that doesn't touch any existing squares. Repeat till it becomes hard to find a new spot.</p>
                 </div>
                 <div class="control">
+                    <button id="square-bloom-button" onclick="squareBloom.draw()">Redraw</button>
                 </div>
             </div>
             <canvas id="square-bloom"></canvas>
