Improve square bloom input parsing.

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                 </div>
                 <div class="control">
                     <label for="square-bloom-padding">Space between squares: </label>
-                    <input type="number" id="square-bloom-padding" min="0" max="500" step="1"><br>
+                    <input type="number" id="square-bloom-padding" step="1"><br>
 
                     <label for="square-bloom-threshold">Minimum square size: </label>
-                    <input type="number" id="square-bloom-threshold" min="0" max="500" step="1"><br>
+                    <input type="number" id="square-bloom-threshold" step="1"><br>
 
                     <label for="square-bloom-border-width">Line width: </label>
                     <input type="number" id="square-bloom-border-width" min="1" max="500" step="1"><br>
