Add presets to Square Bloom.

--- a/index.html
+++ b/index.html
@@ -51,16 +51,26 @@
                     <p>Draw the biggest square you can at a random place that doesn't touch any existing squares. Repeat till it becomes hard to find a new spot.</p>
                 </div>
                 <div class="control">
-                    <label for="square-bloom-padding">Space between squares: </label>
-                    <input type="number" id="square-bloom-padding" step="1"><br>
-
-                    <label for="square-bloom-threshold">Minimum square size: </label>
-                    <input type="number" id="square-bloom-threshold" step="1"><br>
-
-                    <label for="square-bloom-border-width">Line width: </label>
-                    <input type="number" id="square-bloom-border-width" min="1" max="500" step="1"><br>
-                    
-                    <button id="square-bloom-button" onclick="squareBloom.draw()">Redraw</button>
+                    <div class="row">
+                        <button onclick="squareBloom.drawPreset('small')">Small</button>
+                        <button onclick="squareBloom.drawPreset('medium')">Medium</button>
+                        <button onclick="squareBloom.drawPreset('large')">Large</button>
+                    </div>
+                    <div class="row">
+                        <label for="square-bloom-padding">Space between squares: </label>
+                        <input type="number" id="square-bloom-padding" step="1">    
+                    </div>
+                    <div class="row">
+                        <label for="square-bloom-threshold">Minimum square size: </label>
+                        <input type="number" id="square-bloom-threshold" step="1"><br>
+                    </div>
+                    <div class="row">
+                        <label for="square-bloom-border-width">Line width: </label>
+                        <input type="number" id="square-bloom-border-width" min="1" max="500" step="1"><br>
+                    </div>                    
+                    <div class="row">
+                        <button id="square-bloom-redraw" onclick="squareBloom.draw()">Redraw</button>
+                    </div>
                 </div>
             </div>
             <canvas id="square-bloom"></canvas>
