Create canvasUtil to modularize canvas init.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <canvas id="square-bloom"></canvas>
         </div>
 
+        <script src="js/canvasUtil.js"></script>
         <script src="js/10print.js"></script>
         <script src="js/spiro.js"></script>
         <script src="js/squareBloom.js"></script>
