Add better descriptions to all canvases.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="about">
                 <div class="description">
                     <h2>10 PRINT</h2>
-                    <p>10 PRINT is a program written in the early 80s to run on a COMMODORE 64 system to generate a beautiful maze with a simple condition.<span class="code">10 PRINT CHR$ (205.5 + RND (1)); : GOTO 10</span>It prints either a \ or a / with a 50% probability for each.</p>
+                    <p>10 PRINT is a program written in the early 80s to run on a COMMODORE 64 system to generate a beautiful maze with a simple condition.<span class="code">10 PRINT CHR$ (205.5 + RND (1)); : GOTO 10</span>It prints either a \ or a / with a 50% probability for each. The result is a perfect example of complex behaviour emerging from a simple rule.</p>
                 </div>
                 <div class="control">
                     <button id="10print-button" onclick="_10print.draw()">Redraw</button>
@@ -32,7 +32,7 @@
             <div class="about">
                 <div class="description">
                     <h2>Spiro</h2>
-                    <p>Who doesn't love a good spirograph?</p>
+                    <p>Who doesn't love a good spirograph? Tracing the path of a circle rolling along the perimeter of another circle delivers beautiful curves. This can be simulated using simple trigonometry.</p>
                 </div>
                 <div class="control">
                     <label for="spiro-radius">Loopiness: </label>
@@ -48,7 +48,7 @@
             <div class="about">
                 <div class="description">
                     <h2>Square bloom</h2>
-                    <p>Draw the biggest square you can at a random place that doesn't touch any existing squares. Repeat till it becomes hard to find a new spot.</p>
+                    <p>Inspired by the work of <a href="https://rvig.art/">Richard Vigniel (RVig)</a>, square bloom is the first attempt at a complex piece. It's rule is simple: pick a random spot and draw the biggest square possible that won't collide with any existing square. Repeat this process till it becomes hard to find a new spot. The result is a collage of squares that shows the beauty of randomness constrained by order. The inputs let you control the parameters that define the image. While reasonable inputs give a beautiful pattern, "invalid" ones like negative numbers give rather chaotic but fun results.</p>
                 </div>
                 <div class="control">
                     <div class="row">
