Add accent coloring to links.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="about">
                 <div class="description">
                     <h2>Square bloom</h2>
-                    <p>Inspired by the work of <a href="https://rvig.art/">Richard Vigniel (RVig)</a>, square bloom is the first attempt at a complex piece. It's rule is simple: pick a random spot and draw the biggest square possible that won't collide with any existing square. Repeat this process till it becomes hard to find a new spot. The result is a collage of squares that shows the beauty of randomness constrained by order. The inputs let you control the parameters that define the image. While reasonable inputs give a beautiful pattern, "invalid" ones like negative numbers give rather chaotic but fun results.</p>
+                    <p>Inspired by the work of <a class="accent" href="https://rvig.art/">Richard Vigniel (RVig)</a>, square bloom is the first attempt at a complex piece. It's rule is simple: pick a random spot and draw the biggest square possible that won't collide with any existing square. Repeat this process till it becomes hard to find a new spot. The result is a collage of squares that shows the beauty of randomness constrained by order. The inputs let you control the parameters that define the image. While reasonable inputs give a beautiful pattern, "invalid" ones like negative numbers give rather chaotic but fun results.</p>
                 </div>
                 <div class="control">
                     <div class="row">
