Remember how comments work in HTML.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <canvas id="square-bloom"></canvas>
         </div>
 
-        //switch to bootstrap for a responsive layout
+        <!-- switch to bootstrap for a responsive layout -->
         <script src="js/canvasUtil.js"></script>
         <script src="js/10print.js"></script>
         <script src="js/spiro.js"></script>
